# openf1-big-data-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/manifests/: ingestion_manifest.csv
artifacts/pipeline_logs/: bronze_effective_manifest_post_retry.md  bronze_ingestion_audit.md  bronze_manifest_file_reconciliation_added.md  bronze_output_audit.md  colab_notebook_standardization_audit.md  colab_setup_import_audit.md  downstream_notebook_safety_audit.md  duckdb_validation_fix.md  full_bronze_output_review.md  full_bronze_retry_plan.md  full_run_readiness_audit.md  gold_feature_mart_implementation.md  gold_modeling_report_readiness_audit.md  ml_feature_technology_plan_audit.md  phase1_evidence_inventory_audit.md  phase2_silver_quality_deep_dive.md  phase3_gold_join_integration_audit.md  phase4_feature_leakage_ml_readiness_audit.md  phase4_fixes_applied.md  pyspark_duckdb_full_refactor_plan.md  pyspark_duckdb_pre_colab_audit.md  report_retry_reconciliation_update.md  report_structure_artifact_mapping.md  silver_output_audit.md  silver_reporting_improvements.md  spark_silver_duplicate_report_fix.md  spark_silver_starting_grid_fix.md
evidence/smoke_2024_maxsessions2/: EVIDENCE_FREEZE_CHECKLIST.md
notebooks/: 00_colab_setup.ipynb  01_ingestion_bronze.ipynb  02_silver_cleaning_quality.ipynb  03_gold_feature_engineering.ipynb  04_modeling_evaluation.ipynb  05_report_artifacts.ipynb
scripts/: build_01_notebook.py  build_02_notebook.py  colab_bootstrap.py  generate_notebooks.py  rebuild_colab_notebooks.py
src/openf1_pipeline/: __init__.py  (+1 more)
(+165 files in other folders)
