[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openf1-big-data-pipeline"
version = "0.1.0"
description = "Medallion architecture data pipeline for OpenF1 Formula 1 race performance classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
